# AGCPlus

./: .gitignore  README.md  debug_segmnist_sanity.py  environment.yml  environment1.yml  main.py  pyproject.toml  run_sweep.py  template.py
configs/: defaults.yaml
configs/criterion/: ce.yaml  mse.yaml
configs/dataset/: cifar10.yaml  fashion-mnist.yaml  mnist.yaml  sequential_mnist.yaml  yfinance_ts.yaml
configs/grad/: agc.yaml  agc_c.yaml  clipnorm.yaml  dynamic_agc.yaml  fisher_agc.yaml  fisher_curv_agc.yaml  safe_dynamic_agc.yaml  ucc.yaml  var_agc.yaml
configs/model/: cnn.yaml  mlp.yaml  rnn.yaml  vit.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/scheduler/: exponential.yaml  step.yaml
configs/trainer/: default.yaml
src/ags/: registry.py
src/ags/data/: __init__.py  base.py  cifar10.py  fashion-mnist.py  mnist.py  sequential_mnist.py  yfinance_ts.py
src/ags/engine/: builders.py
src/ags/entrypoint/: eval.py  train.py
src/ags/grad/: __init__.py  agc.py  agc_c.py  dynamic_agc.py  fisher_agc.py  fisher_curv_agc.py  safe_dynamic_agc.py  ucc.py  var_agc.py
src/ags/metrics/: classification.py  regression.py
src/ags/models/: __init__.py  cnn.py  mlp.py  resnet.py  rnn.py  vit.py
src/ags/optim/: optim_factory.py
src/ags/scheduler/: scheduler_factory.py
src/ags/trainer/: loop.py
src/ags/utils/: config.py  logging.py  seed.py
